chore(global): fixing the cpu service code

--- a/notebooks/cpu_usage_example.ipynb
+++ b/notebooks/cpu_usage_example.ipynb
@@ -27,13 +27,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T06:23:29.057126Z",
-     "start_time": "2023-11-09T06:23:29.053311Z"
+     "end_time": "2023-11-09T07:24:15.100500Z",
+     "start_time": "2023-11-09T07:24:15.097461Z"
     }
    },
    "outputs": [],
    "source": [
-    "from services.cpu_service import get_cpu_usage"
+    "from services.cpu_service import calculate_cpu_usage, get_cpu_usage_array"
    ]
   },
   {
@@ -49,38 +49,40 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[0.0]"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_cpu_usage()"
+    "calculate_cpu_usage()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T06:23:29.061218Z",
-     "start_time": "2023-11-09T06:23:29.058567Z"
+     "end_time": "2023-11-09T07:24:16.112789Z",
+     "start_time": "2023-11-09T07:24:15.101490Z"
     }
    },
    "id": "3f3c3a41cfdf0edf"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
-   "source": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(['2023-11-09 08:24:16'], [22.3])"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_cpu_usage_array()"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T06:23:29.062782Z",
-     "start_time": "2023-11-09T06:23:29.061329Z"
+     "end_time": "2023-11-09T07:24:16.121374Z",
+     "start_time": "2023-11-09T07:24:16.113254Z"
     }
    },
    "id": "849652dd724476ef"
