--- a/notebooks/cpu_usage_example.ipynb
+++ b/notebooks/cpu_usage_example.ipynb
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T07:24:15.100500Z",
-     "start_time": "2023-11-09T07:24:15.097461Z"
+     "end_time": "2023-11-09T07:31:18.553855Z",
+     "start_time": "2023-11-09T07:31:18.548688Z"
     }
    },
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "calculate_cpu_usage()"
@@ -56,21 +56,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T07:24:16.112789Z",
-     "start_time": "2023-11-09T07:24:15.101490Z"
+     "end_time": "2023-11-09T07:31:19.558723Z",
+     "start_time": "2023-11-09T07:31:18.551756Z"
     }
    },
    "id": "3f3c3a41cfdf0edf"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Get CPU usage array"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "97dc608af0ff8c66"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "(['2023-11-09 08:24:16'], [22.3])"
+      "text/plain": "([1699515074627, 1699515077385, 1699515079550], [12.4, 14.7, 14.5])"
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,8 +91,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T07:24:16.121374Z",
-     "start_time": "2023-11-09T07:24:16.113254Z"
+     "end_time": "2023-11-09T07:31:19.563462Z",
+     "start_time": "2023-11-09T07:31:19.556892Z"
     }
    },
    "id": "849652dd724476ef"
