chore(global): changed the date into milliseconds

--- a/notebooks/cpu_usage_example.ipynb
+++ b/notebooks/cpu_usage_example.ipynb
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T07:31:18.553855Z",
-     "start_time": "2023-11-09T07:31:18.548688Z"
+     "end_time": "2023-11-09T07:33:23.232338Z",
+     "start_time": "2023-11-09T07:33:23.228293Z"
     }
    },
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "calculate_cpu_usage()"
@@ -56,8 +56,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T07:31:19.558723Z",
-     "start_time": "2023-11-09T07:31:18.551756Z"
+     "end_time": "2023-11-09T07:33:24.240072Z",
+     "start_time": "2023-11-09T07:33:23.232853Z"
     }
    },
    "id": "3f3c3a41cfdf0edf"
@@ -74,13 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6ae4c181b2168528"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "([1699515074627, 1699515077385, 1699515079550], [12.4, 14.7, 14.5])"
+      "text/plain": "([1699515204237], [33.2])"
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,8 +101,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T07:31:19.563462Z",
-     "start_time": "2023-11-09T07:31:19.556892Z"
+     "end_time": "2023-11-09T07:33:24.246202Z",
+     "start_time": "2023-11-09T07:33:24.241635Z"
     }
    },
    "id": "849652dd724476ef"
