Feature to create unit test for CPU monitoring

--- a/notebooks/cpu_usage_example.ipynb
+++ b/notebooks/cpu_usage_example.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -34,13 +34,13 @@
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'monitor'",
+     "evalue": "No module named 'services'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/hans/Desktop/Feature/monitor-mind/notebooks/cpu_usage_example.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/hans/Desktop/Feature/monitor-mind/notebooks/cpu_usage_example.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmonitor\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcpu_service\u001b[39;00m \u001b[39mimport\u001b[39;00m calculate_cpu_usage, get_cpu_usage_array\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'monitor'"
+      "\u001b[1;32m/home/hans/Desktop/Feature/monitor-mind/notebooks/cpu_usage_example.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/hans/Desktop/Feature/monitor-mind/notebooks/cpu_usage_example.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mservices\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcpu_service\u001b[39;00m \u001b[39mimport\u001b[39;00m calculate_cpu_usage, get_cpu_usage_array\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'services'"
      ]
     }
    ],
