trying to implement graph for json data

--- a/notebooks/cpu_usage_example.ipynb
+++ b/notebooks/cpu_usage_example.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Showcase of the CPU service"
-   ],
+   "id": "e897164fae809986",
    "metadata": {
     "collapsed": false
    },
-   "id": "e897164fae809986"
+   "source": [
+    "# Showcase of the CPU service"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Importing the service"
-   ],
+   "id": "dca709c4a4f8f257",
    "metadata": {
     "collapsed": false
    },
-   "id": "dca709c4a4f8f257"
+   "source": [
+    "Importing the service"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-11-09T07:33:23.232338Z",
      "start_time": "2023-11-09T07:33:23.228293Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -37,75 +37,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "Get CPU usage"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c366dc19091abd3f"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "calculate_cpu_usage()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-09T07:33:24.240072Z",
-     "start_time": "2023-11-09T07:33:23.232853Z"
-    }
-   },
-   "id": "3f3c3a41cfdf0edf"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Get CPU usage array"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "97dc608af0ff8c66"
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6ae4c181b2168528"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "([1699515204237], [33.2])"
+      "text/plain": [
+       "([1699515204237], [33.2])"
+      ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "get_cpu_usage_array()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c366dc19091abd3f",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-09T07:33:24.246202Z",
-     "start_time": "2023-11-09T07:33:24.241635Z"
-    }
+    "collapsed": false
    },
-   "id": "849652dd724476ef"
+   "source": [
+    "Get CPU usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3f3c3a41cfdf0edf",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-09T07:33:24.240072Z",
+     "start_time": "2023-11-09T07:33:23.232853Z"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "calculate_cpu_usage()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97dc608af0ff8c66",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Get CPU usage array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ae4c181b2168528",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "get_cpu_usage_array()"
+   ]
   }
  ],
  "metadata": {
