--- a/notebooks/memory_service.ipynb
+++ b/notebooks/memory_service.ipynb
@@ -2,23 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'services'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/bansikah/mywork/AdorsysProjects/monitor-mind/notebooks/memory_service.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/bansikah/mywork/AdorsysProjects/monitor-mind/notebooks/memory_service.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mservices\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmemory_service\u001b[39;00m \u001b[39mimport\u001b[39;00m get_ram_usage_array, calculate_ram_usage\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'services'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from services.memory_service import get_ram_usage_array, calculate_ram_usage"
+    "from services.memory_service import get_ram_usage_array, calculate_ram_usage\n"
    ]
   },
   {
